Closed Bug 453084 Opened 17 years ago Closed 16 years ago

Show a different CertificateView message when adding exceptions for a mismatched domain

Categories

(Camino Graveyard :: Security, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino2.0

People

(Reporter: stuart.morgan+bugzilla, Assigned: stuart.morgan+bugzilla)

References

()

Details

(Whiteboard: l10n)

Attachments

(1 file)

When someone brings up the certificate exception sheet for a mismatched domain, right after the warning text they see a friendly green check mark telling them that the cert is valid. We shouldn't be showing anything that dilutes the warning with mixed signals. We should make it possible to push a different message into the CertificateView from outside in special cases like this.
Whiteboard: l10n
Flags: camino2.0b2?
Flags: camino2.0b1?
Flags: camino2.0b1-
Assignee: stuart.morgan+bugzilla → nobody
Attached patch fixSplinter Review
This also removes a couple of strings that I missed when I was pulling out the old cert error UI.
Assignee: nobody → stuart.morgan+bugzilla
Status: NEW → ASSIGNED
Attachment #379462 - Flags: superreview?(mikepinkerton)
Flags: camino2.0b4? → camino2.0b4+
Attachment #379462 - Flags: superreview?(mikepinkerton) → superreview+
Landed on CVS trunk.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: